2010-09-22 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpoint.m: Add -isEqual: and -hash implementations
	to DKEndpoint. Improve thread-safety of DKRunLoopContext.
	* Source/DKPort.m: Add -isEqual: and -hash implementations.
	Remove -_proxyAtPath:, which is superfluous with recent
	changes to the DKProxy API.
	* Source/DKProxy.m
	* Source/DKProxy+Private.h:
	Add accessor method for the port and check proxy scopes by means
	of port equality.
	* Source/NSConnection+DBus.m: Remove use of -[DKPort
	_proxyAthPath:].
	* Tests/TestDKProxy.m: Improve logging for failure in threaded
	test.

	Follow-up changes for DKProxy API change, based on suggestions
	by Fred Kiefer.

2010-09-19 Niels Grewe <niels.grewe@halbordnung.de>

	* ChangLog: Adjust formating.
	* Tools/dk_make_protocol.m: Point to the correct license file.

2010-09-19 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProxy.h
	* Source/DKProxy.m:
	Adjust to use DKPort.
	* Source/DKArgument.m
	* Source/DKNotificationCenter.m
	* Source/DKObjectPathNode.m
	* Source/DKPort.m:
	Fixup for changes in DKProxy.

	Make DKProxy use a DKPort instead of a DKEndpoint/service name
	pair. This is the level of abstraction that will be used by
	DKPortNameServer to handle connection invalidation etc.
	Note: This breaks binary compatibility for DKPort subclasses
	with the fragile ABI.

2010-09-12 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/Introduction.texi
	* Documentation/UsingDBus.texi:
	Documentation fixes.
2010-09-12 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKInterface.m: Include property methods in protocol
	declarations (no Objective-C 2 style "@property()"-stuff yet)
	* Documentation/UsingDBus.texi: Document property support.

2010-09-12 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKMethodCall.m: Fix to respect the semantics of
	dbus_message_iter_init().

2010-09-12 Phillipe Rouselle

	* Source/DKMethod.m
	* Source/DKArgument.m
	* Source/DKMethodCall.m
	* Source/DKProxy.m